PRJ_VER=1.3.6.20100901
SUMMARY=Resolves: #608991; Fixed Upstream issue 1022, 1032; Clean the CMake script
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- Resolves: #608991
- Fixed Issue 1022: chewing commit some text in reset method
  (patched by Peng Huang).
- Fixed Issue 1032: [ibus-chewing] Chewing not commit some single Chinese
  char into application when press enter.
- Rewrite CMake modules to make them cleaner, and documents in cmake module
  help format.
- [For developer and distro maintainer]
  Various targets changed. Use 'make help' to obtain a list of available
  targets.
