@@ -43,25 +43,16 @@ INCLUDE(UseUninstall)
 FIND_PACKAGE(PkgConfig)
 PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0)
 PKG_CHECK_MODULES(IBUS REQUIRED ibus-1.0)
-STRING(REGEX MATCH "[1-9][0-9]*\\.[1-9][0-9]*\\.[0-9]*" IBUS_COMPAT_VERSION "${IBUS_VERSION}")
+STRING(REGEX REPLACE "([1-9][0-9]*)\\.([0-9][0-9]?)[0-9]*\\.([0-9][0-9]?)" "\\1" IBUS_VERSION_MAJOR "${IBUS_VERSION}")
+STRING(REGEX REPLACE "([1-9][0-9]*)\\.([0-9][0-9]?)[0-9]*\\.([0-9][0-9]?)" "\\2" IBUS_VERSION_MINOR "${IBUS_VERSION}")
+STRING(REGEX REPLACE "([1-9][0-9]*)\\.([0-9][0-9]?)[0-9]*\\.([0-9][0-9]?)" "\\3" IBUS_VERSION_PATCH "${IBUS_VERSION}")
+MATH(EXPR IBUS_COMPAT_VERSION
+    "${IBUS_VERSION_MAJOR}*10000+${IBUS_VERSION_MINOR}*100+${IBUS_VERSION_PATCH}")
 MESSAGE("IBUS_VERSION=${IBUS_VERSION} IBUS_COMPAT_VERSION=${IBUS_COMPAT_VERSION}")
-IF ( IBUS_COMPAT_VERSION VERSION_GREATER  1.2.999 )
-    ADD_DEFINITIONS(-DIBUS_VERSION=10300)
-    MESSAGE("IBus 1.3 detected! -DIBUS_VERSION=10300")
-ELSEIF ( IBUS_COMPAT_VERSION VERSION_GREATER  1.2.98 )
-    ADD_DEFINITIONS(-DIBUS_VERSION=10299)
-    MESSAGE("IBus 1.2.99 detected! -DIBUS_VERSION=10299")
-ELSEIF ( IBUS_COMPAT_VERSION VERSION_GREATER  1.1.98 )
-    ADD_DEFINITIONS(-DIBUS_VERSION=10200)
-    MESSAGE("IBus 1.2 detected! -DIBUS_VERSION=10200")
-ELSEIF ( IBUS_COMPAT_VERSION VERSION_GREATER  1.0.98 )
-    ADD_DEFINITIONS(-DIBUS_VERSION=10100)
-    MESSAGE("IBus 1.1 detected! -DIBUS_VERSION=10100")
-ELSE()
-    MESSAGE(FATAL "IBus development package is not installed!")
-ENDIF()
-PKG_CHECK_MODULES(XTST REQUIRED xtst x11)
+ADD_DEFINITIONS(-DIBUS_VERSION=${IBUS_COMPAT_VERSION})
+MESSAGE("ADD_DEFINITIONS(-DIBUS_VERSION=${IBUS_COMPAT_VERSION})")
 
+PKG_CHECK_MODULES(XTST REQUIRED xtst x11)
 PKG_CHECK_MODULES(CHEWING chewing>=0.3.2)
 COMMAND_OUTPUT_TO_VARIABLE(CHEWING_DATA_DIR ${PKG_CONFIG_EXECUTABLE} --variable=datadir chewing)
 ADD_DEFINITIONS(-DCHEWING_DATA_DIR='"${CHEWING_DATA_DIR}"')
@@ -134,6 +125,7 @@ SET(PACK_SOURCE_IGNORE_FILES ${PACK_SOURCE_IGNORE_FILES} ${PRJ_IGNORE_FILES_COMM
 
 PACK_SOURCE(PACK_SOURCE_FILE_NAME "${RPM_BUILD_SOURCES}")
 PACK_RPM(PRJ_SRPM_FILE_NAME "${RPM_BUILD_SPECS}/ibus-chewing.spec.in" "${PACK_SOURCE_FILE_NAME}")
+USE_MOCK("${RPM_BUILD_SPECS}/ibus-chewing.spec.in")
 
 USE_FEDPKG("${RPM_BUILD_SRPMS}/${PRJ_SRPM_FILE_NAME}")
 USE_BODHI()
