@@ -19,6 +19,7 @@
 	    <author>Peng Huang, Ding-Yi Chen</author>
             <icon>@PROJECT_DATA_DIR@/icons/@PROJECT_NAME@.png</icon>
 	    <layout>us</layout>
+	    <rank>80</rank>
         </engine>
     </engines>
 </component>
